# conceal-core

./: .clangd  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  CheckpointsList.h  CryptoNoteConfig.h
src/Blockchain/: BlockCacheSerializer.cpp  BlockCacheSerializer.h  BlockIndex.cpp  Blockchain.cpp  Blockchain.h  BlockchainDeposit.cpp  BlockchainDifficulty.cpp  BlockchainExport.cpp  BlockchainFilter.cpp  BlockchainFilter.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainIndicesSerializer.cpp  BlockchainIndicesSerializer.h  BlockchainInit.cpp  BlockchainMessages.cpp  BlockchainMessages.h  BlockchainMisc.cpp  BlockchainQueries.cpp  BlockchainReorg.cpp  BlockchainStorage.cpp  BlockchainSync.cpp  BlockchainTypes.cpp  BlockchainValidation.cpp  CheckTxOutputsVisitor.h  CheckpointList.h  Checkpoints.cpp  Checkpoints.h  DepositIndex.cpp  DepositIndex.h  IBlockchainStorageObserver.h  ITransactionValidator.h  InvestmentIndex.cpp  InvestmentIndex.h  SwappedVector.cpp  SwappedVector.h  UpgradeDetector.cpp  UpgradeDetector.h
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/BoltClientWallet/: CMakeLists.txt  Config.cpp  Config.h  DexMenus.cpp  DexMenus.h  JsonHelpers.cpp  JsonHelpers.h  SidechainMenus.cpp  SidechainMenus.h  TxHistory.cpp  TxHistory.h  main.cpp
src/BoltCore/: BalanceTracker.cpp  BalanceTracker.h  BoltCore.cpp  BoltCore.h  BoltCoreTypes.h  CMakeLists.txt  DepositManager.cpp  DepositManager.h  FusionManager.cpp  FusionManager.h  NewOutputScanner.cpp  NewOutputScanner.h  OutputSelector.cpp  OutputSelector.h  OutputUtils.h  OwnedOutputScanner.cpp  OwnedOutputScanner.h  RelayHandler.cpp  RelayHandler.h  RpcBlockScanner.cpp  RpcBlockScanner.h  SignatureBuilder.cpp  SignatureBuilder.h  SubAddressManager.cpp  SubAddressManager.h  SyncOrchestrator.cpp  SyncOrchestrator.h  TransactionBuilder.cpp  TransactionBuilder.h
src/BoltDex/: BoltDex.cpp  BoltDex.h  BoltDexRpcServer.cpp  BoltDexRpcServer.h  BoltDexTypes.h  main.cpp
src/BoltHttp/: BoltHttpClient.cpp  BoltHttpClient.h  BoltHttpRequest.h  BoltHttpResponse.h  BoltHttpServer.cpp  BoltHttpServer.h  BoltHttpServer_win.cpp  BoltSocket.hpp  BoltSse.cpp  BoltSse.h  BoltWebSocket.cpp  BoltWebSocket.h  FiberExecutor.cpp  FiberExecutor.h  IExecutor.h  ThreadPool.cpp  ThreadPool.h
src/BoltRPC/: BoltRpcServer.cpp  BoltRpcServer.h  MultiWalletManager.cpp  MultiWalletManager.h  StateManager.cpp  StateManager.h  SyncManager.cpp  SyncManager.h  SyncMonitor.cpp  SyncMonitor.h  WalletManager.cpp  WalletManager.h  main.cpp
src/BoltSync/: BlockDeserializer.cpp  BlockDeserializer.h  BoltSync.cpp  BoltSync.h  CMakeLists.txt  CryptoHelpers.cpp  CryptoHelpers.h  PathHelpers.h  ProgressWriter.cpp  ProgressWriter.h
src/ClientWallet/: EventLoop.cpp  EventLoop.h  NullNode.h  SyncEngine.cpp  SyncEngine.h  main.cpp
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathHelpers.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  StringInputStream.h  (+17 more)
src/Conceal/: CLI.cpp  CLI.h  StatusPanel.h  TuiRenderer.cpp  TuiRenderer.h  main.cpp
src/ConcealWallet/: ClientHelper.cpp  ClientHelper.h  ConcealWallet.cpp  ConcealWallet.h  Const.h  PasswordContainer.cpp  PasswordContainer.h  TransferCmd.cpp  TransferCmd.h  main.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  Blockchain.cpp  Blockchain.h  CheckpointList.h  Checkpoints.cpp  Checkpoints.h  CheckpointsList.cpp  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  DomainIndex.cpp  DomainIndex.h  EncryptedMemo.cpp  EncryptedMemo.h  IBlock.cpp  IBlock.h  ICore.h  ICoreObserver.h  IMinerHandler.h  ITimeProvider.cpp  ITimeProvider.h  ITxPoolObserver.h  IntrusiveLinkedList.h  (+27 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerChunk.cpp  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/MigrationTool/: main.cpp
src/Mnemonics/: Mnemonics.cpp  Mnemonics.h
src/NodeClient/: NodeClient.cpp  NodeClient.h
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: ConnectionContext.h  IP2pNodeInternal.cpp  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  P2pNode.h  (+22 more)
tests/: BoltCoreBalanceTracker.cpp  BoltCoreTransactionBuilder.cpp  CMakeLists.txt  gpu_vs_cpu_mining_hash.cpp  pow_gpu_equivalence.cpp  pow_gpu_mine_equivalence.cpp
(+326 files in other folders)
